--- a/generico/pom.xml
+++ b/generico/pom.xml
@@ -49,6 +49,48 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			
+<!-- 			 <plugin> -->
+<!--                 <groupId>com.github.eirslett</groupId> -->
+<!--                 <artifactId>frontend-maven-plugin</artifactId> -->
+<!--                 <version>1.12.0</version> -->
+<!--                 <configuration> -->
+<!--                     <nodeVersion>v16.13.1</nodeVersion> -->
+<!--                 </configuration> -->
+<!--                 <executions> -->
+<!--                     <execution> -->
+<!--                         <id>install-npm</id> -->
+<!--                         <goals> -->
+<!--                             <goal>install-node-and-npm</goal> -->
+<!--                         </goals> -->
+<!--                     </execution> -->
+<!--                     <execution> -->
+<!--                         <id>npm-install</id> -->
+<!--                         <goals> -->
+<!--                             <goal>npm</goal> -->
+<!--                         </goals> -->
+<!--                     </execution> -->
+<!--                     <execution> -->
+<!--                         <id>npm-build</id> -->
+<!--                         <goals> -->
+<!--                             <goal>npm</goal> -->
+<!--                         </goals> -->
+<!--                         <configuration> -->
+<!--                             <arguments>run-script build</arguments> -->
+<!--                         </configuration> -->
+<!--                     </execution> -->
+<!--                     <execution> -->
+<!--                         <id>npm-test</id> -->
+<!--                         <goals> -->
+<!--                             <goal>npm</goal> -->
+<!--                         </goals> -->
+<!--                         <configuration> -->
+<!--                             <arguments>run-script test</arguments> -->
+<!--                         </configuration> -->
+<!--                         <phase>test</phase> -->
+<!--                     </execution> -->
+<!--                 </executions> -->
+<!--             </plugin> -->
 		</plugins>
 	</build>
 
